Add metric for Prometheus